tests/paczka1/small_fuzzy/47975108.err
Error in line 2: hM5tv44pS A678 53,1
Error in line 1: 7bS7 A586 37,4
Error in line 4: 7bS7 S990 7,6
Error in line 8: do6O S990 76,1
Error in line 5: iBuO990yfi A586 23,6
Error in line 14: S990 A678 84,1
Error in line 15: S990 S990 54,2
